working stk push
